<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">repairpal</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_credit_card">Credit card</string>
<string name="msg_start_inspectio">Start inspection</string>
<string name="lbl_cancel_request">Cancel request</string>
<string name="lbl_mechanic">Mechanic</string>
<string name="msg_vehicle_owner">Vehicle Owner                       :

Vehicle Type                           :

Vehicle Name                         :

Fuel Type                                  :

License Plate                          :</string>
<string name="msg_welcome_john_d">Welcome!
John Doe</string>
<string name="lbl_find_another">Find another</string>
<string name="msg_how_can_we_assi">How can we assist you?</string>
<string name="lbl_confirm_payment">Confirm Payment</string>
<string name="msg_david_noels_sp">David Noels

SpringField Garage</string>
<string name="msg_already_have_an">Already have an account? Signin here</string>
<string name="lbl_decline">Decline</string>
<string name="lbl_not_registered">Not registered? </string>
<string name="msg_payment_is_comp">Payment is complete</string>
<string name="lbl_password2">password</string>
<string name="lbl_mpesa">Mpesa</string>
<string name="msg_mechanic_signup">Mechanic Signup here</string>
<string name="lbl_send_request">Send request</string>
<string name="msg_back_to_homepag">Back to homepage</string>
<string name="lbl_pay_now">Pay now</string>
<string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing
 elit, sed do eiusmod tempor incididunt ut labore et
 dolore magna aliqua. Ut enim ad minim veniam, quis
 nostrud exercitation ullamco laboris nisi ut aliquip
 ex ea commodo consequat. Duis aute irure dolor in
 reprehenderit in voluptate velit esse cillum dolore
 eu fugiat nulla pariatur. Excepteur sint occaecat
 cupidatat non proident, sunt in culpa qui officia
 deserunt mollit anim id est laborum.</string>
<string name="msg_forgot_password">Forgot Password?</string>
<string name="msg_client_service">Client Service Request</string>
<string name="lbl_repairpal">Repairpal</string>
<string name="lbl_ksh_2000">Ksh 2000</string>
<string name="msg_mechanic_regist">Mechanic Register</string>
<string name="msg_request_a_servi">Request a service</string>
<string name="lbl_register">Register</string>
<string name="msg_vehicle_repair">Vehicle repair charges</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_signup_here">Signup here</string>
<string name="lbl_your_location">Your Location</string>
<string name="lbl_signin_here">Signin here</string>
<string name="msg_welcome_to_repa">Welcome to RepairPal</string>
<string name="msg_choose_payment">Choose payment method</string>
<string name="msg_client_issue_de">Client issue details</string>
<string name="msg_inspection_and">Inspection and Payment is complete</string>
<string name="lbl_email">Email</string>
<string name="lbl_flat_tire">Flat tire</string>
<string name="lbl_confirm_issue">Confirm issue</string>
<string name="lbl_sign_out">Sign Out</string>
<string name="msg_more_descriptio">More description</string>
<string name="lbl_car_issue_list">Car issue list</string>
<string name="msg_let_s_get_start">Let\u2019s Get Started</string>
<string name="lbl_history">History</string>
<string name="lbl_towing">Towing</string>
<string name="msg_example_gmail_c">example@gmail.com</string>
<string name="lbl_key_lock">Key lock</string>
<string name="lbl_client_details">Client Details</string>
<string name="lbl_login">Login</string>
<string name="msg_already_have_an2">Already have an account? </string>
<string name="lbl_out_of_fuel">Out of Fuel</string>
<string name="lbl_other_service">Other service</string>
<string name="msg_not_registered">Not registered? Signup here</string>
<string name="msg_welcome_david">Welcome!
David Noels</string>
<string name="lbl_home_page">Home Page</string>
<string name="lbl_notification">Notification</string>
<string name="lbl_vehicle_issues">Vehicle issues</string>
<string name="lbl_password">Password</string>
<string name="lbl_go_to_homepage">Go to homepage</string>
<string name="msg_issue_type">Issue Type                               :

Locate Client                          :</string>
<string name="lbl_accept">Accept</string>
<string name="lbl_issue_5">Issue 5</string>
<string name="lbl_issue_3">Issue 3</string>
<string name="msg_car_battery_iss">Car Battery Issue</string>
<string name="lbl_issue_4">Issue 4</string>
<string name="lbl_issue_1">Issue 1</string>
<string name="lbl_issue_2">Issue 2</string>
</resources>
