<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="mechanicRegistrationVM" type="com.repairpal.app.modules.mechanicregistration.data.viewmodel.MechanicRegistrationVM"/>
    </data>
    <LinearLayout android:id="@+id/linearMechanicRegist"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageLoginOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_199pxh"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="@dimen/_248pxh"
            android:scaleType="fitXY" imageRes="@{@drawable/img_login1}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_login1"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtMechanicRegist"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_81pxh"
            android:layout_marginStart="@dimen/_81pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtMechanicRegist}"
            style="@style/txtInterbold20" tools:text="@string/msg_mechanic_regist"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtLetsGetStart"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtLetsGetStart}"
            style="@style/txtInterbold15" tools:text="@string/msg_let_s_get_start"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtEmail}"
            style="@style/txtInterbold12" tools:text="@string/lbl_email"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnExamplegmailcomOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_example_gmail_c"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/msg_example_gmail_c"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtPassword}"
            style="@style/txtInterbold12" tools:text="@string/lbl_password"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnpasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_100">
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtPasswordOne"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_130pxh"
                android:layout_marginStart="@dimen/_130pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtPasswordOne}"
                style="@style/txtInterregular12" tools:text="@string/lbl_password2"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegister"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_46pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="@dimen/_118pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_register"
            android:textAllCaps="false" style="@style/btnSolid_1" tools:text="@string/lbl_register"/>
        <TextView android:ellipsize="end" android:gravity="end"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_66pxh"
            android:layout_marginStart="@dimen/_66pxh"
            android:layout_marginTop="@dimen/_85pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{mechanicRegistrationVM.mechanicRegistrationModel.txtConfirmation}"
            style="@style/txtInterregular12" tools:text="@string/msg_already_have_an"/>
    </LinearLayout>
</layout>
