<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signinVM" type="com.repairpal.app.modules.signin.data.viewmodel.SigninVM"/>
    </data>
    <LinearLayout android:id="@+id/linearSignin"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStacklogin"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_265pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_44pxv" android:layout_width="@dimen/_282pxh">
            <TextView android:ellipsize="end" android:id="@+id/txtLogin"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_69pxv"
                android:layout_marginEnd="@dimen/_107pxh"
                android:layout_marginStart="@dimen/_107pxh"
                android:layout_marginTop="@dimen/_69pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{signinVM.signinModel.txtLogin}"
                style="@style/txtInterbold20" tools:text="@string/lbl_login"/>
            <ImageView android:id="@+id/imageLoginOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_265pxh"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_login1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_login1"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtWelcometoRepa"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_85pxh"
            android:layout_marginStart="@dimen/_85pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtWelcometoRepa}"
            style="@style/txtInterbold15" tools:text="@string/msg_welcome_to_repa"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEmail"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtEmail}"
            style="@style/txtInterbold12" tools:text="@string/lbl_email"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnExamplegmailcomOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_9pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/msg_example_gmail_c"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/msg_example_gmail_c"/>
        <TextView android:ellipsize="end" android:id="@+id/txtPassword"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtPassword}"
            style="@style/txtInterbold12" tools:text="@string/lbl_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_16pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:text="@string/lbl_password2"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_password2"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtForgotPassword}"
            style="@style/txtInterregular12" tools:text="@string/msg_forgot_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLoginOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_46pxv"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="@dimen/_118pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_login" android:textAllCaps="false"
            style="@style/btnSolid_1" tools:text="@string/lbl_login"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtNotregistered"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_93pxh"
            android:layout_marginStart="@dimen/_93pxh"
            android:layout_marginTop="@dimen/_99pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{signinVM.signinModel.txtNotregistered}"
            style="@style/txtInterregular12" tools:text="@string/msg_not_registered"/>
    </LinearLayout>
</layout>
